--- a/exo5/css/style.css
+++ b/exo5/css/style.css
@@ -69,6 +69,11 @@ h1{
     margin: 5px 0;
 }
 
+h2{
+    font-family: 'Abril Fatface', cursive;
+    font-size: 32px;
+}
+
 h3{
     text-transform: uppercase;
     font-weight: 700;
@@ -99,6 +104,17 @@ h3{
 #hero{
     margin-top: 50px;
     gap: 10px;
+}
+
+/* Hotel */
+
+#hotel{
+    margin-top: 100px;
+    gap: 30px;
+}
+
+#hotel>div:nth-child(1){
+    width: 53%;
 }
 
 
